changes to mta file

--- a/mta.yaml
+++ b/mta.yaml
@@ -8,13 +8,16 @@ modules:
   path: gen/srv
   requires:
   - name: MyHANAApp-db
+  - name: uaa_MyHANAApp
   provides:
   - name: srv-api
     properties:
       srv-url: ${default-url}
   parameters:
+    host: ${appname}
     buildpack: nodejs_buildpack
   build-parameters:
+    ignore: [".env", "./node_modules"]
     builder: npm-ci
 - name: MyHANAApp-db-deployer
   type: hdb
@@ -96,6 +99,13 @@ resources:
             ProxyType: Internet
             Type: HTTP
             URL: https://ui5.sap.com
+          - Name: hana-app-api
+            Authentication: NoAuthentication
+            ProxyType: Internet
+            HTML5.ForwardAuthToken: true
+            HTML5.DynamicDestination: true
+            Type: HTTP
+            URL: https://${appname}.${default-domain}
           existing_destinations_policy: update
       version: 1.0.0
     service: destination
@@ -117,6 +127,8 @@ resources:
 parameters:
   deploy_mode: html5-repo
   enable-parallel-deployments: true
+  appname: uk007
+
 build-parameters:
   before-all:
   - builder: custom
